fixed some text boxes behind opaque images and added more text details

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ header ul li a:hover {
 }
 
 .hero h2 {
+    text-align: center;
     position: absolute;
     font-family: 'Fira Sans', sans-serif;
     font-size: 32px;
@@ -123,24 +124,26 @@ main .gallery ul li {
 main .stars {
     display: block;
     position: relative;
-    background-image: url("https://cdn.pixabay.com/photo/2017/08/30/01/05/milky-way-2695569_960_720.jpg");
+    background: url("https://cdn.pixabay.com/photo/2017/08/30/01/05/milky-way-2695569_960_720.jpg");
     background-size: cover;
     background-position: center;
     height: 40vh;
     width: 65vw;
-    background-color: #262a3f93;
     opacity: 0.5;
     transition: 0.3s;
 }
+
 
 main .stars .caption {
     background-color: var(--grey);
     color: var(--blue);
     position: absolute;
+    border-bottom: 4px solid var(--charcoal);
+    border-right: 4px solid var(--charcoal);
+    padding: 16px 8px;
     padding-left: 24px;
     left: 0;
-    bottom: 16px;
-
+    bottom: 24px;
 }
 
 main .intro {
@@ -149,11 +152,28 @@ main .intro {
 
 main .book {
     display: block;
+    position: relative;
+    background: url("https://coolbackgrounds.io/images/backgrounds/index/sea-edge-79ab30e2.png");
+    background-size: cover;
+    background-position: center;
     height: 20vh;
     width: 32vw;
     opacity: 0.5;
     transition: 0.3s;
 }
+
+main .book .caption {
+    background-color: var(--grey);
+    color: var(--blue);
+    position: absolute;
+    border-bottom: 4px solid var(--charcoal);
+    border-right: 4px solid var(--charcoal);
+    padding: 16px 8px;
+    padding-left: 24px;
+    left: 0;
+    bottom: 24px;
+}
+
 
 main .stars:hover, .book:hover {
     opacity: 1;
